--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.5.0",
+    "firebase": "^10.12.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
+    "@firebase/rules-unit-testing": "^3.0.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
