--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,12 @@
     "compilerOptions": {
       "checkJs": true,
       "jsx": "react-jsx",
-      "baseUrl": "."
+      "baseUrl": ".",
+      "paths": {
+        "src/*": ["src/*"],
+        "#src/*": ["src/*"]
+      }
     },
-    "include": ["./src/**/*"],
-    "exclude": ["node_modules", "**/node_modules/*"]
+    "include": ["./src/**/*", "./firestore/*"],
+    "exclude": ["node_modules", "**/node_modules/*"],
 }
