--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "imports": {
+    "#config": "./src/firebase/config.js",
+    "#src/*": "./src/*"
+  },
   "scripts": {
     "k": "hello",
     "dev": "vite",
@@ -11,15 +15,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.5.0",
+    "classnames": "^2.5.1",
+    "dot-object": "^2.1.5",
     "firebase": "^10.12.2",
+    "firebase-admin": "^12.3.1",
+    "flat": "https://github.com/HammadAwan424/flat-extended/tarball/master",
+    "immer": "^10.1.1",
     "localforage": "^1.10.0",
+    "lodash.isequal": "^4.5.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^3.0.3",
