--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.5.0",
     "classnames": "^2.5.1",
     "dot-object": "^2.1.5",
+    "express": "^4.21.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.3.1",
     "flat": "https://github.com/HammadAwan424/flat-extended/tarball/master",
@@ -30,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "sort-by": "^0.0.2",
     "use-immer": "^0.10.0"
