--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "k": "hello",
+    "test": "jest",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -24,6 +25,7 @@
     "firebase-admin": "^12.3.1",
     "flat": "https://github.com/HammadAwan424/flat-extended/tarball/master",
     "immer": "^10.1.1",
+    "jest": "^29.7.0",
     "localforage": "^1.10.0",
     "lodash.isequal": "^4.5.0",
     "match-sorter": "^6.3.4",
@@ -37,16 +39,23 @@
     "use-immer": "^0.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.11.1",
     "@firebase/rules-unit-testing": "^3.0.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "babel-jest": "^29.7.0",
     "babel-plugin-root-import": "^6.6.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.9.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
