--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,6 @@
         "#src/*": ["src/*"]
       }
     },
-    "include": ["./src/**/*", "./firestore/*", "tests/**/*"],
-    "exclude": ["node_modules", "**/node_modules/*"],
+    "include": ["./src/**/*", "./firestore/*", "tests/**/*", "./server/**/*"],
+    "exclude": ["node_modules", "**/node_modules/*"]
 }
