--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "sort-by": "^0.0.2",
-    "use-immer": "^0.10.0"
+    "use-immer": "^0.10.0",
+    "vite-plugin-vercel": "^9.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -51,6 +52,7 @@
     "babel-jest": "^29.7.0",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.57.1",
+    "eslint-import-resolver-jsconfig": "^1.1.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.0",
