--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^12.3.1",
     "flat": "https://github.com/HammadAwan424/flat-extended/tarball/master",
+    "glob": "^11.0.0",
     "immer": "^10.1.1",
     "jest": "^29.7.0",
     "localforage": "^1.10.0",
@@ -57,6 +58,7 @@
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.9.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
