--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.5.0",
     "classnames": "^2.5.1",
@@ -62,6 +64,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.2.0"
   }
 }
