--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "k": "hello",
     "test": "jest",
+    "firebase": "firebase emulators:start --import ./testdata",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -18,6 +19,8 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.2",
     "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.5.0",
     "classnames": "^2.5.1",
@@ -33,6 +36,7 @@
     "lodash.isequal": "^4.5.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-day-picker": "^9.1.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
@@ -48,6 +52,7 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.11.1",
     "@firebase/rules-unit-testing": "^3.0.3",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
