--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "#src/*": "./src/*"
   },
   "scripts": {
-    "k": "hello",
     "test": "jest",
-    "firebase": "firebase emulators:start --import ./testdata",
+    "firebase": "firebase emulators:start --import ./mock",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
